--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,10 +13,7 @@ services:
     env_file:
       - .env
     command: >
-      sh -c "python manage.py collectstatic --noinput &&
-             python manage.py makemigrations --noinput &&
-             python manage.py migrate &&
-             gunicorn ai_summary.wsgi:application --bind 0.0.0.0:8000 --workers 4 --timeout 120 --worker-class gevent --log-level debug"    
+      sh -c "python manage.py migrate && tail -f /dev/null"
     depends_on:
       db:
         condition: service_healthy
@@ -37,25 +34,21 @@ services:
       timeout: 5s
       retries: 5
       
-  mq:
-    image: rabbitmq:3.13.7-alpine
-    env_file:
-      - .env
-
-  worker:
+  frontend:
     build:
       context: .
-    container_name: ai_summary_worker
+    container_name: ai_summary_frontend
+    ports:
+      - "8501:8501"
     volumes:
       - .:/backend
-      - ./media:/backend/media      
+      - ./media:/backend/media
     env_file:
       - .env
     command: >
-      sh -c "celery -A ai_summary worker -l INFO"    
+      sh -c "streamlit run app.py"
     depends_on:
       - backend
-      - mq
 
 volumes:
   db-data:
